--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,24 +1,42 @@
-<h1>Tasks</h1>
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-  <div class="container">
-  	<div class="row">
-      <div class="col-lg-8">
-      <% @tasks.each do |task| %>
-        <span class="glyphicon glyphicon-option-vertical"></span>
-        <span class="glyphicon glyphicon-option-vertical move-closer"></span>
-        <span class="task-status"><%= check_box_tag 'task-finished', '', task.finished %></span>
-        <span class="task-title"><%= task.title %></span>
-        <p class="task-description"><%= task.description %></p>
-        <p class="tags"><% task.tags.each do |tag| %><span><%= tag.title %></span> <% end %></p>
-      <% end %>
+
+
+<div class="container">
+  <div class="row">
+    <h1>Tasks</h1>
+    <% if user_signed_in? %>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            
+                <% @tasks.each do |task| %>
+                  <div class="form-inline">
+                    <div class="form-group">
+                    
+                      <span class="glyphicon glyphicon-option-vertical"></span>
+                      <span class="glyphicon glyphicon-option-vertical move-closer"></span>
+                      <span>
+                        <%= form_for task do |f| %>
+                          <%= f.check_box :finished %>
+                        <% end %>
+                      </span>
+
+                    </div>
+                  </div>
+
+                  <span class="task-title"><%= task.title %></span><br />
+                  <span class="task-description"><%= task.description %></span>
+                
+                  <p class="tags"><% task.tags.each do |tag| %><span><%= tag.title %></span> <% end %></p>
+
+                <% end %>
+              
+              
+          </div>
+          <div class="col-md-8">
+            <%= link_to 'New Task', new_task_path, class:"btn btn-md btn-primary" %>
+          </div>
+        </div>
       </div>
-  	</div>
+    <% end %>
   </div>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
+</div>
