--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,7 +12,7 @@
 		<%= f.check_box :finished %>
 	</p>
 	<p>
-		<%= f.submit %>
+		<%= f.submit class:"btn btn-md btn-primary" %>
 	</p>
 <% end %>
 
