Added more icons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,3 +8,12 @@
 .checkbox-align {
 	vertical-align: top !important;
 }
+.act-important {
+	margin-right: 5px;
+}
+.act-starred {
+	margin: 0 10px;
+}
+.act-additional {
+	margin-left: 5px;
+}
