--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,63 +9,17 @@
   </head>
 
   <body>
-	  <nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      
-	      
-	      <ul class="nav navbar-nav navbar-right">
-	        
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	          </ul>
-	        </li>
-	        <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#">Action</a></li>
-	              <li><a href="#">Another action</a></li>
-	              <li><a href="#">Something else here</a></li>
-	              <li role="separator" class="divider"></li>
-	              <li><a href="#">Separated link</a></li>
-	            </ul>
-	          </li>
-		      </ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
-		</nav>
+	  <%= render 'layouts/navigation' %>
 		<div class="container">
 			<div class="row">
-				<p class="pull-right">
-					<% if user_signed_in? %>
-					  Logged in as <strong><%= current_user.email %></strong>.
-					  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-					  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-				  <% else %>
-					  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-					  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-					<% end %>
-				</p>
+				<div class="col-md-2">
+					<h1><span class="fa fa-check-square"></span> To-Do</h1>
+				</div>
+				<div class="col-md-12">
+					<%= yield %>
+				</div>
 				
-				<%= yield %>
+
 			</div>
 		</div>
     
