Implemented new and edit actions on modal

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,19 +1,29 @@
-<%= form_for @task do |f| %>
-	<p>
-		<%= f.label :title %><br/>
-		<%= f.text_field :title %>
-	</p>
-	<p>
-		<%= f.label :description %><br/>
-		<%= f.text_area :description %>
-	</p>
-	<p>
-		<%= f.label :finished %>
-		<%= f.check_box :finished %>
-	</p>
-	<p>
-		<%= f.submit class:"btn btn-md btn-primary" %>
-	</p>
-<% end %>
-
-		
+<div class="modal-body">	
+	<%= form_for @task do |f| %>
+		<% if @task.errors.any? %>
+	      <div id="error_explanation">
+	        <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+	        <ul>
+	          <% @task.errors.full_messages.each do |msg| %>
+	              <li><%= msg %></li>
+	          <% end %>
+	        </ul>
+	      </div>
+	  <% end %>
+		<div class="form-group">
+			<%= f.label :title %><br/>
+			<%= f.text_field :title %>
+		</div>
+		<div class="form-group">
+			<%= f.label :description %><br/>
+			<%= f.text_area :description %>
+		</div>
+		<div class="form-group">
+			<%= f.label :finished %>
+			<%= f.check_box :finished %>
+		</div>
+</div>
+<div class="modal-footer">
+  <%= f.submit class:"btn btn-md btn-primary" %>
+</div>
+	<% end %>
