--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
                 </div>
               </div>
               <div class="col-md-8">
-                <%= link_to edit_task_path(task) do %>
+                <%= link_to edit_task_path(task), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window' } do %>
                   <span class="task-title"><%= task.title %></span><br />
                   <span class="task-description"><%= task.description %></span>
                 <% end %>
@@ -37,9 +37,19 @@
       </div>
 
       <div class="col-md-12">
-        <%= link_to 'New Task', new_task_path, class:"btn btn-md btn-primary" %>
+        <%= link_to 'New Task', new_task_path,  { class:"btn btn-md btn-primary", :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window' }  %>
       </div>
+      <div id="modal-window" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="modal-window">
 
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
