Changed redirect url to root_url on checkbox update

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
                   <span class="glyphicon glyphicon-option-vertical move-closer"></span>
                   <span class="checkbox-inline checkbox-align">
                       <%= form_for task do |f| %>
-                        <%= f.check_box :finished %>
+                        <%= f.check_box :finished, data: { no_turbolink: true } %>
                       <% end %>
                   </span>
                 </div>
