Added additional actions to tasks

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,10 @@
 	background-color: #fff;
 }
 
+.empty-icons {
+	visibility: hidden;
+}
+
 /* SubMenu */
 .dropdown-submenu { 
 	position: relative; 
