Clean up html in index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,7 +35,7 @@ div.link-block:hover, a:hover {
 }
 
 div.col-md-2 ul.dropdown-menu > li {
-	margin-left: 15px;
+	padding: 0 5px;
 }
 
 /* SubMenu */
