--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,11 +46,15 @@
 	          <% end %>
 	        </li>
 	        <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EN <span class="caret"></span></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#">English</a></li>
-	              <li><a href="#">Spanish</a></li>
-	              <li><a href="#">Turkish</a></li>
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+	            <ul class="f32">
+	            	<li><span class="flag us flag-element"></span><span class="flag-text-element"> EN</span></li>
+	            </ul>
+	            </a>
+	            <ul class="dropdown-menu f32">
+	              <li><span class="flag us flag-element"></span><span class="flag-text-element"> English</span></li>
+	              <li><span class="flag es flag-element"></span><span class="flag-text-element"> Spanish</span></li>
+	              <li><span class="flag tr flag-element"></span><span class="flag-text-element"> Turkish</span></li>
 	            </ul>
 	          </li>
 		      </ul>
