--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -31,6 +31,9 @@
 				<%= f.label :starred %>
 				<%= f.check_box :starred %>
 			</div>
+			<div class="form-group">
+				<%= f.text_field :all_tags, placeholder: "Tags separated with comma" %>
+			</div>
 		</div>
   <%= f.submit class:"btn btn-md btn-primary" %>
 	<% end %>
