--- a/app/views/tasks/_edit.html.erb
+++ b/app/views/tasks/_edit.html.erb
@@ -1,10 +1,6 @@
-<div class="modal-header">
+<div class="modal-header text-center">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true" type="button">×</button>
   <h1>Edit task</h1>
 </div>
 
   <%= render 'form' %>
-
-<div class="modal-footer">
-
-</div>
