--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,11 +12,11 @@
 	  <% end %>
 		<div class="form-group">
 			<%= f.label :title %><br/>
-			<%= f.text_field :title %>
+			<%= f.text_field :title, class: "form-control" %>
 		</div>
 		<div class="form-group">
 			<%= f.label :description %><br/>
-			<%= f.text_area :description %>
+			<%= f.text_area :description, class: "form-control" %>
 		</div>
 		<div class="form-inline">
 			<div class="form-group">
@@ -31,10 +31,13 @@
 				<%= f.label :starred %>
 				<%= f.check_box :starred %>
 			</div>
-			<div class="form-group">
-				<%= f.text_field :all_tags, placeholder: "Tags separated with comma" %>
-			</div>
 		</div>
-  <%= f.submit class:"btn btn-md btn-primary" %>
+		<div class="form-group">
+			<%= f.text_field :all_tags, placeholder: "Tags separated with comma", class: "form-control" %>
+		</div>
+		<div class="text-center">
+			<%= f.submit "Save", class:"btn btn-md btn-primary" %>
+		</div>
+  
 	<% end %>
 </div>
