--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,15 @@
 
   <body>
 	  <%= render 'layouts/navigation' %>
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-2">
-					<h1><span class="fa fa-check-square"></span> To-Do</h1>
+				<div class="col-lg-2 col-md-2">
+					<h1><%= link_to root_path do %><span class="fa fa-check-square"></span> To-Do<% end %></h1>
+        	<%= link_to 'New Task', new_task_path,  { class:"btn btn-md btn-primary", :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window' }  %>
 				</div>
-				<div class="col-md-12">
+				<div class="col-lg-10 col-md-10">
 					<%= yield %>
 				</div>
-				
-
 			</div>
 		</div>
     
