Added empty links to filters

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,18 @@ ul.f32 > li {
 	list-style-type: none;
 }
 
+#all-tasks-filter {
+	margin-top: 25px;
+}
+
+.filter-txt {
+	margin-left: 15px;
+}
+
+.filters-section-heading {
+	margin: 15px 0 5px -50px;
+}
+
 .flag-text-element {
 	/*position: absolute;
   top: 50%;
